--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       class="classNameclassNameclassNameclassNameclassNameclassNameclassName"
       id="idNameidNameidNameidNameidNameidNameidNameidNameidNameidName"
     ></div>
+    <input /></body>
   </body>
 </html>
