--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       class="classNameclassNameclassNameclassNameclassNameclassNameclassName"
       id="idNameidNameidNameidNameidNameidNameidNameidNameidNameidName"
     ></div>
-    <input /></body>
+    <input />
   </body>
 </html>
